src/main/java/org/example/GraphvizExprParser.java
// Generated from C:/Users/Joseph/IdeaProjects/Compiladores/src/main/java/org/example/GraphvizExpr.g4 by ANTLR 4.13.1
package org.example;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class GraphvizExprParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DQUOTE=1, DIREDGE=2, UDIREDGE=3, STRICT=4, GRAPH=5, DIGRAPH=6, SUBGRAPH=7, 
		LBRACE=8, RBRACE=9, LBRACKET=10, RBRACKET=11, SEMICOLON=12, DOUBCOLON=13, 
		COMMA=14, ASSIGN=15, NODE=16, EDGE=17, COMPASS=18, ID=19, VAR=20, NUM=21, 
		STR=22, XML=23, WS=24;
	public static final int
		RULE_program = 0, RULE_graph = 1, RULE_stmt_list = 2, RULE_stmt = 3, RULE_attr_stmt = 4, 
		RULE_attr_list = 5, RULE_a_list = 6, RULE_edge_stmt = 7, RULE_edgeRHS = 8, 
		RULE_dgeop = 9, RULE_node_stmt = 10, RULE_node_id = 11, RULE_port = 12, 
		RULE_subgraph = 13, RULE_compass_pt = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "graph", "stmt_list", "stmt", "attr_stmt", "attr_list", "a_list", 
			"edge_stmt", "edgeRHS", "dgeop", "node_stmt", "node_id", "port", "subgraph", 
			"compass_pt"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'\"'", "'->'", "'--'", "'strict'", "'graph'", "'digraph'", "'subgraph'", 
			"'{'", "'}'", "'['", "']'", "';'", "':'", "','", "'='", "'node'", "'edge'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DQUOTE", "DIREDGE", "UDIREDGE", "STRICT", "GRAPH", "DIGRAPH", 
			"SUBGRAPH", "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", "SEMICOLON", 
			"DOUBCOLON", "COMMA", "ASSIGN", "NODE", "EDGE", "COMPASS", "ID", "VAR", 
			"NUM", "STR", "XML", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GraphvizExpr.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GraphvizExprParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	 
		public ProgramContext() { }
		public void copyFrom(ProgramContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class EndFileContext extends ProgramContext {
		public TerminalNode EOF() { return getToken(GraphvizExprParser.EOF, 0); }
		public EndFileContext(ProgramContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphvizExprListener ) ((GraphvizExprListener)listener).enterEndFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphvizExprListener ) ((GraphvizExprListener)listener).exitEndFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphvizExprVisitor ) return ((GraphvizExprVisitor<? extends T>)visitor).visitEndFile(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class GraphObjContext extends ProgramContext {
		public GraphContext graph() {
			return getRuleContext(GraphContext.class,0);
		}
		public TerminalNode EOF() { return getToken(GraphvizExprParser.EOF, 0); }
		public GraphObjContext(ProgramContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphvizExprListener ) ((GraphvizExprListener)listener).enterGraphObj(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphvizExprListener ) ((GraphvizExprListener)listener).exitGraphObj(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphvizExprVisitor ) return ((GraphvizExprVisitor<? extends T>)visitor).visitGraphObj(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			setState(34);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case STRICT:
			case GRAPH:
			case DIGRAPH:
				_localctx = new GraphObjContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(30);
				graph();
				setState(31);
				match(EOF);
				}
				break;
			case EOF:
				_localctx = new EndFileContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(33);
				match(EOF);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GraphContext extends ParserRuleContext {
		public GraphContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_graph; }
	 
		public GraphContext() { }
		public void copyFrom(GraphContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class GraphDefContext extends GraphContext {
		public TerminalNode LBRACE() { return getToken(GraphvizExprParser.LBRACE, 0); }
		public Stmt_listContext stmt_list() {
			return getRuleContext(Stmt_listContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(GraphvizExprParser.RBRACE, 0); }
		public TerminalNode GRAPH() { return getToken(GraphvizExprParser.GRAPH, 0); }
		public TerminalNode DIGRAPH() { return getToken(GraphvizExprParser.DIGRAPH, 0); }
		public TerminalNode STRICT() { return getToken(GraphvizExprParser.STRICT, 0); }
		public TerminalNode ID() { return getToken(GraphvizExprParser.ID, 0); }
		public GraphDefContext(GraphContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphvizExprListener ) ((GraphvizExprListener)listener).enterGraphDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphvizExprListener ) ((GraphvizExprListener)listener).exitGraphDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphvizExprVisitor ) return ((GraphvizExprVisitor<? extends T>)visitor).visitGraphDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GraphContext graph() throws RecognitionException {
		GraphContext _localctx = new GraphContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_graph);
		int _la;
		try {
			_localctx = new GraphDefContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(37);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==STRICT) {
				{
				setState(36);
				match(STRICT);
				}
			}

			setState(39);
			_la = _input.LA(1);
			if ( !(_la==GRAPH || _la==DIGRAPH) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(41);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(40);
				match(ID);
				}
			}

			setState(43);
			match(LBRACE);
			setState(44);
			stmt_list();
			setState(45);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Stmt_listContext extends ParserRuleContext {
		public Stmt_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt_list; }
	 
		public Stmt_listContext() { }
		public void copyFrom(Stmt_listContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class EmptyContext extends Stmt_listContext {
		public EmptyContext(Stmt_listContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphvizExprListener ) ((GraphvizExprListener)listener).enterEmpty(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphvizExprListener ) ((GraphvizExprListener)listener).exitEmpty(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphvizExprVisitor ) return ((GraphvizExprVisitor<? extends T>)visitor).visitEmpty(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StmntContext extends Stmt_listContext {
		public StmtContext stmt() {
			return getRuleContext(StmtContext.class,0);
		}
		public Stmt_listContext stmt_list() {
			return getRuleContext(Stmt_listContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(GraphvizExprParser.SEMICOLON, 0); }
		public StmntContext(Stmt_listContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphvizExprListener ) ((GraphvizExprListener)listener).enterStmnt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphvizExprListener ) ((GraphvizExprListener)listener).exitStmnt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphvizExprVisitor ) return ((GraphvizExprVisitor<? extends T>)visitor).visitStmnt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Stmt_listContext stmt_list() throws RecognitionException {
		Stmt_listContext _localctx = new Stmt_listContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_stmt_list);
		int _la;
		try {
			setState(54);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case GRAPH:
			case SUBGRAPH:
			case LBRACE:
			case NODE:
			case EDGE:
			case ID:
				_localctx = new StmntContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(47);
				stmt();
				setState(49);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SEMICOLON) {
					{
					setState(48);
					match(SEMICOLON);
					}
				}

				setState(51);
				stmt_list();
				}
				break;
			case RBRACE:
				_localctx = new EmptyContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StmtContext extends ParserRuleContext {
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
	 
		public StmtContext() { }
		public void copyFrom(StmtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NodeObjContext extends StmtContext {
		public Node_stmtContext node_stmt() {
			return getRuleContext(Node_stmtContext.class,0);
		}
		public NodeObjContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphvizExprListener ) ((GraphvizExprListener)listener).enterNodeObj(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphvizExprListener ) ((GraphvizExprListener)listener).exitNodeObj(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphvizExprVisitor ) return ((GraphvizExprVisitor<? extends T>)visitor).visitNodeObj(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class EdgeObjContext extends StmtContext {
		public Edge_stmtContext edge_stmt() {
			return getRuleContext(Edge_stmtContext.class,0);
		}
		public EdgeObjContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphvizExprListener ) ((GraphvizExprListener)listener).enterEdgeObj(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphvizExprListener ) ((GraphvizExprListener)listener).exitEdgeObj(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphvizExprVisitor ) return ((GraphvizExprVisitor<? extends T>)visitor).visitEdgeObj(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SubGraphObjContext extends StmtContext {
		public SubgraphContext subgraph() {
			return getRuleContext(SubgraphContext.class,0);
		}
		public SubGraphObjContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphvizExprListener ) ((GraphvizExprListener)listener).enterSubGraphObj(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphvizExprListener ) ((GraphvizExprListener)listener).exitSubGraphObj(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphvizExprVisitor ) return ((GraphvizExprVisitor<? extends T>)visitor).visitSubGraphObj(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StmtAssignContext extends StmtContext {
		public List<TerminalNode> ID() { return getTokens(GraphvizExprParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(GraphvizExprParser.ID, i);
		}
		public TerminalNode ASSIGN() { return getToken(GraphvizExprParser.ASSIGN, 0); }
		public StmtAssignContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphvizExprListener ) ((GraphvizExprListener)listener).enterStmtAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphvizExprListener ) ((GraphvizExprListener)listener).exitStmtAssign(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphvizExprVisitor ) return ((GraphvizExprVisitor<? extends T>)visitor).visitStmtAssign(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AttrContext extends StmtContext {
		public Attr_stmtContext attr_stmt() {
			return getRuleContext(Attr_stmtContext.class,0);
		}
		public AttrContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphvizExprListener ) ((GraphvizExprListener)listener).enterAttr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphvizExprListener ) ((GraphvizExprListener)listener).exitAttr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphvizExprVisitor ) return ((GraphvizExprVisitor<? extends T>)visitor).visitAttr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_stmt);
		try {
			setState(63);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				_localctx = new NodeObjContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(56);
				node_stmt();
				}
				break;
			case 2:
				_localctx = new EdgeObjContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(57);
				edge_stmt();
				}
				break;
			case 3:
				_localctx = new AttrContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(58);
				attr_stmt();
				}
				break;
			case 4:
				_localctx = new StmtAssignContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(59);
				match(ID);
				setState(60);
				match(ASSIGN);
				setState(61);
				match(ID);
				}
				break;
			case 5:
				_localctx = new SubGraphObjContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(62);
				subgraph();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Attr_stmtContext extends ParserRuleContext {
		public Attr_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attr_stmt; }
	 
		public Attr_stmtContext() { }
		public void copyFrom(Attr_stmtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AttrDefContext extends Attr_stmtContext {
		public Attr_listContext attr_list() {
			return getRuleContext(Attr_listContext.class,0);
		}
		public TerminalNode GRAPH() { return getToken(GraphvizExprParser.GRAPH, 0); }
		public TerminalNode NODE() { return getToken(GraphvizExprParser.NODE, 0); }
		public TerminalNode EDGE() { return getToken(GraphvizExprParser.EDGE, 0); }
		public AttrDefContext(Attr_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphvizExprListener ) ((GraphvizExprListener)listener).enterAttrDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphvizExprListener ) ((GraphvizExprListener)listener).exitAttrDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphvizExprVisitor ) return ((GraphvizExprVisitor<? extends T>)visitor).visitAttrDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Attr_stmtContext attr_stmt() throws RecognitionException {
		Attr_stmtContext _localctx = new Attr_stmtContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_attr_stmt);
		int _la;
		try {
			_localctx = new AttrDefContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 196640L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(66);
			attr_list();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Attr_listContext extends ParserRuleContext {
		public Attr_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attr_list; }
	 
		public Attr_listContext() { }
		public void copyFrom(Attr_listContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AttrListContext extends Attr_listContext {
		public TerminalNode LBRACKET() { return getToken(GraphvizExprParser.LBRACKET, 0); }
		public TerminalNode RBRACKET() { return getToken(GraphvizExprParser.RBRACKET, 0); }
		public A_listContext a_list() {
			return getRuleContext(A_listContext.class,0);
		}
		public Attr_listContext attr_list() {
			return getRuleContext(Attr_listContext.class,0);
		}
		public AttrListContext(Attr_listContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphvizExprListener ) ((GraphvizExprListener)listener).enterAttrList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphvizExprListener ) ((GraphvizExprListener)listener).exitAttrList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphvizExprVisitor ) return ((GraphvizExprVisitor<? extends T>)visitor).visitAttrList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Attr_listContext attr_list() throws RecognitionException {
		Attr_listContext _localctx = new Attr_listContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_attr_list);
		int _la;
		try {
			_localctx = new AttrListContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(LBRACKET);
			setState(70);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(69);
				a_list();
				}
			}

			setState(72);
			match(RBRACKET);
			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LBRACKET) {
				{
				setState(73);
				attr_list();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class A_listContext extends ParserRuleContext {
		public A_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_a_list; }
	 
		public A_listContext() { }
		public void copyFrom(A_listContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AttrListAssignContext extends A_listContext {
		public List<TerminalNode> ID() { return getTokens(GraphvizExprParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(GraphvizExprParser.ID, i);
		}
		public TerminalNode ASSIGN() { return getToken(GraphvizExprParser.ASSIGN, 0); }
		public A_listContext a_list() {
			return getRuleContext(A_listContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(GraphvizExprParser.SEMICOLON, 0); }
		public TerminalNode COMMA() { return getToken(GraphvizExprParser.COMMA, 0); }
		public AttrListAssignContext(A_listContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphvizExprListener ) ((GraphvizExprListener)listener).enterAttrListAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphvizExprListener ) ((GraphvizExprListener)listener).exitAttrListAssign(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphvizExprVisitor ) return ((GraphvizExprVisitor<? extends T>)visitor).visitAttrListAssign(this);
			else return visitor.visitChildren(this);
		}
	}

	public final A_listContext a_list() throws RecognitionException {
		A_listContext _localctx = new A_listContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_a_list);
		int _la;
		try {
			_localctx = new AttrListAssignContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(ID);
			setState(77);
			match(ASSIGN);
			setState(78);
			match(ID);
			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEMICOLON || _la==COMMA) {
				{
				setState(79);
				_la = _input.LA(1);
				if ( !(_la==SEMICOLON || _la==COMMA) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(82);
				a_list();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Edge_stmtContext extends ParserRuleContext {
		public Edge_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_edge_stmt; }
	 
		public Edge_stmtContext() { }
		public void copyFrom(Edge_stmtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class EdgeDefContext extends Edge_stmtContext {
		public EdgeRHSContext edgeRHS() {
			return getRuleContext(EdgeRHSContext.class,0);
		}
		public Node_idContext node_id() {
			return getRuleContext(Node_idContext.class,0);
		}
		public SubgraphContext subgraph() {
			return getRuleContext(SubgraphContext.class,0);
		}
		public Attr_listContext attr_list() {
			return getRuleContext(Attr_listContext.class,0);
		}
		public EdgeDefContext(Edge_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphvizExprListener ) ((GraphvizExprListener)listener).enterEdgeDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphvizExprListener ) ((GraphvizExprListener)listener).exitEdgeDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphvizExprVisitor ) return ((GraphvizExprVisitor<? extends T>)visitor).visitEdgeDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Edge_stmtContext edge_stmt() throws RecognitionException {
		Edge_stmtContext _localctx = new Edge_stmtContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_edge_stmt);
		int _la;
		try {
			_localctx = new EdgeDefContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				{
				setState(85);
				node_id();
				}
				break;
			case SUBGRAPH:
			case LBRACE:
				{
				setState(86);
				subgraph();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(89);
			edgeRHS();
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LBRACKET) {
				{
				setState(90);
				attr_list();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
